# mcp-mongodb-server

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  start-mcp.sh
scripts/: dev.sh
src/: __init__.py  main.py  server.py  server.py.backup
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py
src/models/: __init__.py  schemas.py  validation.py
src/services/: __init__.py  collection_service.py  database_service.py  stats_service.py
src/tools/: __init__.py  connection_guard.py  decorators.py  dependencies.py  tools_collections.py  tools_connection.py  tools_databases.py  tools_documents.py  tools_indexes.py  tools_stats.py
src/utils/: __init__.py  logger.py  mongo_connector.py  security.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_server.py  test_services.py  test_tools.py  test_utils.py
